# common_game_server

./: .clang-format  .clang-tidy  .dockerignore  .git-blame-ignore-revs  .gitguardian.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPENDENCY_MATRIX.md  Doxyfile  LICENSE-THIRD-PARTY  NOTICES  README.kr.md  README.md  README_8md.html  SECURITY.md  VERSIONING.md  ai__components_8hpp.html  ai__components_8hpp.js  ai__components_8hpp_source.html  ai__system_8hpp.html  ai__system_8hpp.js  ai__system_8hpp_source.html  ai__types_8hpp.html  ai__types_8hpp.js  ai__types_8hpp_source.html  annotated.html  annotated_dup.js  auth__server_8hpp.html  auth__server_8hpp.js  auth__server_8hpp_source.html  auth__types_8hpp.html  auth__types_8hpp.js  auth__types_8hpp_source.html  behavior__tree_8hpp.html  behavior__tree_8hpp.js  behavior__tree_8hpp_source.html  (+1032 more)
.github/workflows/: benchmarks.yml  build-Doxygen.yaml  chaos-tests.yml  ci.yml  coverage.yml  docs.yml  load-test.yml
cmake/: kcenon_deps.cmake
deploy/: docker-compose.yml
deploy/config/: auth.yaml  dbproxy.yaml  game.yaml  gateway.yaml  lobby.yaml
deploy/docker/: Dockerfile.auth  Dockerfile.dbproxy  Dockerfile.game  Dockerfile.gateway  Dockerfile.lobby
docs/: API_QUICK_REFERENCE.md  API_REFERENCE.kr.md  API_REFERENCE.md  ARCHITECTURE.kr.md  ARCHITECTURE.md  BENCHMARKS.kr.md  BENCHMARKS.md  CHANGELOG.kr.md  CHANGELOG.md  COMPATIBILITY.md  DEPRECATION.md  ECOSYSTEM.md  FEATURES.kr.md  FEATURES.md  GETTING_STARTED.md  INDEX.md  INTEGRATION_STRATEGY.md  PRD.md  PRODUCTION_QUALITY.kr.md  PRODUCTION_QUALITY.md  PROJECT_STRUCTURE.kr.md  PROJECT_STRUCTURE.md  README.kr.md  README.md  ROADMAP.md  SDS.md  SOUP.md  SRS.md  TRACEABILITY.md  faq.dox  mainpage.dox  troubleshooting.dox  tutorial_ai_behavior.dox  tutorial_client.dox  tutorial_combat.dox  tutorial_database.dox  tutorial_ecs.dox  tutorial_foundation_adapters.dox  tutorial_game_objects.dox  tutorial_inventory.dox  (+6 more)
docs/adr/: ADR-001-unified-game-server-architecture.md  ADR-002-entity-component-system.md  ADR-003-plugin-hot-reload.md  (+1 more)
examples/: 01_result_errors.cpp  02_foundation_adapters.cpp  03_game_objects.cpp  04_spatial_world.cpp  05_combat.cpp  06_ai_behavior.cpp  07_inventory.cpp  08_quest.cpp  09_database.cpp  10_networking.cpp  11_client.cpp  CMakeLists.txt  README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+165 more)
src/foundation/thread/: CMakeLists.txt  job_scheduler.cpp
src/game/ai_system/: CMakeLists.txt  ai_system.cpp
src/game/combat_system/: CMakeLists.txt  combat_system.cpp
src/game/inventory_system/: CMakeLists.txt  inventory_system.cpp
src/game/object_system/: CMakeLists.txt  object_system.cpp
src/game/quest_system/: CMakeLists.txt  quest_system.cpp
src/game/world_system/: CMakeLists.txt  world_system.cpp
src/plugins/: CMakeLists.txt  file_watcher.cpp  hot_reload_manager.cpp  mmorpg_plugin.cpp  plugin_manager.cpp  version_constraint.cpp
src/services/auth/: CMakeLists.txt  auth_server.cpp  crypto_utils.hpp  main.cpp  password_hasher.cpp  rate_limiter.cpp  rsa_utils.hpp  token_blacklist.cpp  token_provider.cpp  token_store.cpp  user_repository.cpp
src/services/dbproxy/: CMakeLists.txt  connection_pool_manager.cpp  dbproxy_server.cpp  main.cpp  query_cache.cpp
src/services/game/: CMakeLists.txt  game_loop.cpp  game_server.cpp  main.cpp  map_instance_manager.cpp
src/services/gateway/: CMakeLists.txt  gateway_server.cpp  gateway_session_manager.cpp  main.cpp  route_table.cpp  token_bucket.cpp
src/services/lobby/: CMakeLists.txt  elo_calculator.cpp  lobby_server.cpp  main.cpp  matchmaking_queue.cpp  party_manager.cpp
src/services/runner/: CMakeLists.txt  circuit_breaker.cpp  health_server.cpp  persistence_manager.cpp  service_runner.cpp  snapshot_manager.cpp  write_ahead_log.cpp
tests/: CMakeLists.txt
tests/benchmark/ecs/: component_storage_benchmark_test.cpp  memory_profiling_benchmark_test.cpp  system_scheduler_benchmark_test.cpp
tests/benchmark/foundation/: message_serialization_benchmark_test.cpp  network_throughput_test.cpp
tests/benchmark/plugin/: plugin_load_benchmark_test.cpp
tests/benchmark/service/: dbproxy_benchmark_test.cpp  game_ccu_benchmark_test.cpp
tests/chaos/: data_loss_test.sh  fault_injection_test.sh
tests/integration/foundation/: network_integration_test.cpp
tests/integration/service/: auth_server_integration_test.cpp  dbproxy_integration_test.cpp  game_server_integration_test.cpp  gateway_integration_test.cpp  lobby_integration_test.cpp
tests/load/: auth_load.js  game_session_load.js  gateway_load.js  generate_report.sh  scaling_validation.sh
tests/unit/: version_test.cpp
tests/unit/ecs/: component_storage_test.cpp  entity_manager_test.cpp  parallel_execution_test.cpp  query_test.cpp  system_scheduler_test.cpp
tests/unit/foundation/: common_adapter_test.cpp  container_adapter_test.cpp  database_adapter_test.cpp  json_log_formatter_test.cpp  logger_adapter_test.cpp  monitoring_adapter_test.cpp  network_adapter_test.cpp  thread_adapter_test.cpp
tests/unit/game/: ai_system_test.cpp  combat_system_test.cpp  inventory_system_test.cpp  object_system_test.cpp  quest_system_test.cpp  world_system_test.cpp
tests/unit/plugin/: dependency_resolution_test.cpp  event_bus_test.cpp  hot_reload_test.cpp  mmorpg_plugin_test.cpp  plugin_test.cpp
tests/unit/service/: auth_crypto_test.cpp  auth_server_test.cpp  dbproxy_test.cpp  game_loop_test.cpp  game_server_test.cpp  gateway_components_test.cpp  gateway_server_test.cpp  lobby_server_test.cpp  matchmaking_test.cpp  party_manager_test.cpp  persistence_test.cpp  reliability_test.cpp
(+165 files in other folders)
